--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+.holder{height:100vh;
+		width:100vw;
+		background-color:grey;
+		display:flex;
+		flex-direction:center;
+		justify-content:center;
+	
+}
+.item{text-align:center;
+	  width:100px;
+	  height:100px;
+	  background-color:red;
+	
+}
