--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@
 .holder{height:100vh;
 		width:100vw;
 		background-color:grey;
-		display:flex;
-		flex-direction:center;
-		justify-content:center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	
 }
 .item{text-align:center;
